id:6260 Fix word-wrap for labels.

--- a/dev/sass/no-flat/tasksapi/_tasks.scss
+++ b/dev/sass/no-flat/tasksapi/_tasks.scss
@@ -231,6 +231,7 @@ span.label {
   vertical-align: baseline;
   border-radius: .25em;
   word-wrap: break-word;
+  white-space: normal;
 
   &.label-default{
     background-color: #337ab7;
